--- a/addon.gradle
+++ b/addon.gradle
@@ -1,7 +1,20 @@
+tasks.register('copyCpwToResources', Copy) {
+    from 'build/classes/java/main/cpw' // 源目录
+    into 'build/classes/java/main/resources/cpw' // 目标目录
+}
+compileJava.finalizedBy(copyCpwToResources)
+checkstyleMain.dependsOn(copyCpwToResources)
+
 jar {
     manifest {
         attributes(
-            'Premain-Class': 'com.github.wohaopa.wrapper.Agent'
+            'Premain-Class': 'com.github.wohaopa.wrapper.Agent',
+            'Agent-Class': 'com.github.wohaopa.wrapper.Agent'
         )
     }
+
+    dependsOn copyCpwToResources
+
+    exclude('cpw/**')
 }
+
