add README and fix bug

--- a/src/main/resources/settings/wrapper_config.json
+++ b/src/main/resources/settings/wrapper_config.json
@@ -14,7 +14,7 @@
       "extra_mods": [
         "extramods"
       ],
-      "modsListFile": "Forge-2.6.1"
+      "modsListFile": "Forge-2.6.1.json"
     }
   },
   "needTransform_extraMods": {
