--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -34,5 +34,9 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
+//    runtimeOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.5.4-GTNH:dev")
+    shadowImplementation("com.google.guava:guava:17.0")
+    shadowImplementation("com.google.code.gson:gson:2.2.4")
+    shadowImplementation("org.ow2.asm:asm-debug-all:5.0.3")
+
 }
