--- a/gradle.properties
+++ b/gradle.properties
@@ -61,7 +61,7 @@ gradleTokenVersion = GRADLETOKEN_VERSION
 # The string's content will be replaced with your mod's version when compiled. You should use this to specify your mod's
 # version in @Mod([...], version = VERSION, [...]).
 # Leave these properties empty to skip individual token replacements.
-replaceGradleTokenInFile = com.github.wohaopa.wrapper.Tags
+replaceGradleTokenInFile = Tags.java
 
 # In case your mod provides an API for other mods to implement you may declare its package here. Otherwise, you can
 # leave this property empty.
