--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -38,5 +38,6 @@ dependencies {
     shadowImplementation("com.google.guava:guava:17.0")
     shadowImplementation("com.google.code.gson:gson:2.2.4")
     shadowImplementation("org.ow2.asm:asm-debug-all:5.0.3")
+    implementation 'com.formdev:flatlaf:3.5.1'
 
 }
